[package]
name = "randomprime"
version = "0.2.3"
authors = ["April Wade <wayedt@gmail.com>"]
edition = "2018"

[dependencies]
adler32 = "1.0"
clap = "2.9"
encoding = "0.2"
flate2 = "1.0"
memmap = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"
ssmarshal = "1"
rand = "0.4"
winapi = "0.3"

auto_struct_macros = { path = "auto_struct_macros" }
dol_linker = { path = "dol_linker" }
generated = { path = "generated" }
nod_wrapper = { path = "nod_wrapper" }
ppcasm = { path = "ppcasm" }
reader_writer = { path = "reader_writer" }
structs = { path = "structs" }

[profile.release]
lto = true
panic = "unwind"

[workspace]
members = [
    "auto_struct_macros",
    "dol_linker",
    "generated",
        "generated/macro_file_proxy",
            "generated/macro_file_proxy/macro_file_proxy_proc_macro",
    "nod_wrapper",
    "ppcasm",
        "ppcasm/ppcasm_macro",
    "reader_writer",
    "structs",
]

[lib]
name = "randomprime"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]
