[package]
name = "auto_struct_macros"
version = "0.1.0"
authors = ["April Wade <wayedt@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
reader_writer = { path = "../reader_writer" }

[[test]]
name = "test_macros"
path = "./tests/test.rs"
