[workspace]
members = [
    "async_utils",
    "core-futures-tls",
    "primeapi-rs",
        "primeapi-rs/primeapi_macros",
    "rel_loader",
    "rel_patches",
]

[profile.dev]
panic = "abort"
lto = true
codegen-units = 1

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = 's'

