[workspace]
members = [
    "async_utils",
    "mini_http_server",
    "primeapi-rs",
        "primeapi-rs/primeapi_macros",
    "rel_loader",
    "rel_patches",
]

[profile.dev]
panic = "abort"
lto = true
codegen-units = 1

[profile.release]
panic = "abort"
lto = true
incremental = false
codegen-units = 1
opt-level = 's'

