[package]
name = "dol_linker"
version = "0.1.0"
authors = ["April Wade <wayedt@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
enum-map = "0.5"
goblin = "0.1"
memmap = "0.7"
snafu = "0.6"

auto_struct_macros = { "path" = "../auto_struct_macros" }
reader_writer = { "path" = "../reader_writer" }
