[package]
name = "async_utils"
version = "0.1.0"
authors = ["April Wade <wayedt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = "0.13"
pin-utils = "0.1.0-alpha.4"

core = { path = "../core-futures-tls", package = "core-futures-tls" }

[dev-dependencies]
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["async-await"] }

[lib]
doctest = false
