[package]
name = "barebones_http"
version = "0.1.0"
authors = ["April Wade <wayedt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.4", default-features = false }
pin-utils = "0.1.0-alpha.4"

core = { path = "../core-futures-tls", package = "core-futures-tls" }
async_utils = { path = "../async_utils", package = "async_utils" }

[lib]
doctest = false
