[package]
name = "patch_fn_macros"
version = "0.1.0"
authors = ["April Wade <wayedt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "0.15", features = ["full"] }
quote = "0.6"
md5 = "0.6"

[lib]
proc-macro = true
