[package]
name = "rel_patches"
version = "0.1.0"
authors = ["April Wade <wayedt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = "0.13"
linkme = "0.1"

primeapi = { path = "../primeapi-rs", features = ["rel_prolog"] }
serde = { version = "1", default-features = false, features = ["derive"] }
ssmarshal = { version = "1", default-features = false }

[lib]
crate-type = ["staticlib"]
